Bug 1619885 - Port bug 1619442: Style inactive status panel with visibility: hidden. r=mkmelin

--- a/mail/base/content/messenger.css
+++ b/mail/base/content/messenger.css
@@ -205,7 +205,7 @@ statuspanel {
   left: 0;
   z-index: 20;
   max-width: 50%;
-  transition: opacity 100ms ease-out;
+  transition: opacity 120ms ease-out, visibility 120ms;
 }
 
 statuspanel:-moz-locale-dir(ltr)[mirror],
@@ -218,6 +218,7 @@ statuspanel[label=""],
 statuspanel:not([label]) {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .statuspanel-inner {
